# Videogen_services

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml  qa.yml
deploy/k8s/base/: asset-service.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  poi-service.yaml  postgres.yaml  (+5 more)
libs/common/: pyproject.toml
libs/common/common/: __init__.py  config.py  errors.py  http_client.py  kafka.py  logging.py
libs/common/common/middleware/: __init__.py  auth.py  correlation.py  request_limit.py
libs/contracts/: pyproject.toml
scripts/: init-databases.sql  pipeline_test.py  seed.sh  wait-for-it.sh
services/asset-service/: Dockerfile  alembic.ini  pyproject.toml
services/poi-service/: Dockerfile  alembic.ini  pyproject.toml
services/render-service/: Dockerfile  alembic.ini  pyproject.toml
services/render-service/alembic/: env.py
services/render-service/alembic/versions/: 001_initial_renders.py  002_add_voiceover_publish_fields.py
services/render-service/app/: main.py
services/render-service/app/api/routers/: health.py  renders.py
services/render-service/app/core/: config.py
services/render-service/app/db/: models.py  schemas.py
services/render-service/app/integrations/: kafka_consumer.py  kafka_producer.py  runway_client.py
services/render-service/app/services/: render_service.py
services/render-service/tests/: conftest.py  test_pipeline.py  test_renders.py
services/script-service/: Dockerfile  alembic.ini  pyproject.toml
services/transcription-service/: Dockerfile  alembic.ini  pyproject.toml
tests/karate/: pom.xml
tools/qa/: README.md  config.py  http_e2e.py  report.py  requirements.txt  run.py
(+74 files in other folders)
