[project]
name = "real-estate-poi-video-platform"
version = "0.1.0"
description = "Monorepo – Real Estate POI Video Platform (5 microservices)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

