[project]
name = "render-service"
version = "0.1.0"
description = "Video render microservice – scene-by-scene rendering via Runway (stub)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "aiokafka>=0.10",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "python-json-logger>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

